--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,259 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  margin: 0;
-  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color:grey;
+}
+
+/* Navigation CSS */
+
+#navBar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: tomato;
+  border-style: 10px solid;
+  border-color: #636364;
+}
+
+#navBar h1 {
+  width: 25%;
+  font-weight: 500;
+  margin: 5px;
+  font-size: 50px;
+  color: white;
+}
+
+#navigation {
+  display: flex;
+  width: 50%;
+  align-items: center;
+  justify-content: space-evenly;
+  color: white;
+  font-size: 30px ;
+}
+
+
+.icons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 35%;
+}
+
+.icons img {
+  margin: 15px;
+  cursor: pointer;
+}
+
+#Sarahphoto {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  }
+
+/* Subheading/welcome Page */
+
+#heroBanner {
+  display: grid;
+  min-height: 600px;
+  height: 80vh;
+  grid-template-columns: 100%;
+  grid-template-rows: 100% ;
+  grid-template-areas: 
+  "codingimage" 
+  }
+
+  .heroBannerArea {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    position: relative;
+    }
+  
+  #headline {
+    border: 5px solid #FF6200;
+    background-color: rgba(255,255,255,0.8);
+    position: absolute;
+    right: -0px;
+    z-index: 2 ;
+    padding: 50px;
+  }
+
+  #headline h2 {
+    font-size: 60px;
+    margin: 0px 0px;
+    color: #FF6200;
+  }
+
+  /* Subheader Image CSS */
+
+  #codingimage {
+    grid-area: codingimage ;
+    background-image: url("../images/pexels-pixabay-270348.jpg");
+  }
+  
+
+   /* About Me CSS */
+
+.page-wrapper {
+  background-color: tomato;
+  display: grid;
+  grid-template-columns: auto;
+}
+
+
+.page-section1 {
+    margin: 0px 5%;
+    display: grid;
+    height: 250px;
+    grid-template-columns:1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:   
+  "headline2 Paragraph " 
+  }
+
+
+#Paragraph {
+  font-size: 15px;
+  color:white;
+  text-align:left;
+
+}
+
+  #headline2 {
+    font-size: 40px;
+    color:white;
+    text-align:centre;
+    border-right: 2px solid whitesmoke;
+    width: 300px;
+    margin: 10px
+  }
+
+   /* Work Page CSS  */
+
+     /* SubHead   */ 
+   .subHeading {
+    font-size: 40px;
+    color:white;
+    text-align:centre;
+    border-right: 2px solid whitesmoke;
+    width: 300px;
+    margin: 10px
+  }
+
+       /* Container Grid for Work  */ 
+    
+    #workGrid {
+      margin: 0px 5%;
+      display: grid;
+      height: 750px;
+      grid-template-columns:1fr 1fr 1fr ;
+      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-areas:   
+    "subheader furniture furniture" 
+    "subheader prework-studyguide horiseon"
+    "subheader Calculator Website";
+    }
+   
+    #furniture {
+      grid-area: furniture ;
+      background-image: url("../images/furniture_website.png");
+
+    }
+    
+    
+    #prework-studyguide {
+      grid-area: prework-studyguide;
+      background-image: url("../images/Preworkstudyguide.png");
+    
+    }
+    
+    #horiseon {
+    grid-area: horiseon;
+    background-image: url("../images/Horiseonwebsite.png");
+    }
+
+     
+    #Calculator{
+      grid-area: Calculator;
+      background-image: url("../images/Horiseonwebsite.png");
+      }
+      
+
+
+    #Website{
+      grid-area: Website;
+      background-image: url("../images/Horiseonwebsite.png");
+      }
+      
+      #subheader{
+        grid-area: subheader;
+      }
+
+ 
+
+    .gridheading {
+      background-color: rgb(0, 0,0,0.7);
+      padding: 15px;
+    height: 25px;
+    color: white;
+    font-size: 18px;
+    border-left: 5px solid orange;
+    }
+
+    
+    .projectGridArea {
+      
+      background-size:cover;
+      background-repeat: no-repeat;
+      margin: 10px;
+      cursor: pointer;
+      display: grid;
+      align-content:end ;
+        } 
+
+  /* Contact Page CSS */
+
+  .page-wrapper {
+    background-color: tomato;
+    display: grid;
+    grid-template-columns: auto;
+  }
+  
+  
+  .page-section2 {
+      margin: 0px 5%;
+      display: grid;
+      height: 750px;
+      grid-template-columns:1fr 1fr ;
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas:   
+    "headline3 paragraph4 " 
+    }
+    
+      #headline3 {
+        font-size: 40px;
+        color:white;
+        text-align:centre;
+        border-right: 2px solid whitesmoke;
+        width: 300px;
+        margin: 10px
+      }  
+
+
+
+
+  /* Footer CSS */
+.footer {
+  padding: 30px;
+  clear: both;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.5;
+  text-align: center;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
 
-p {
-  margin: 0;
+.footerfont 
+{
+  font-size: 20px;
 }
