--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,25 @@
 body {
   font-family: 'Poppins', sans-serif;
-  background-color:grey;
+  background-color: grey;
 }
 
-/* Navigation CSS */
+.page-wrapper {
+  background-color: tomato;
+}
 
-#navBar {
+/* Header  CSS */
+
+header {
   display: flex;
-  flex-direction: row;
   align-items: center;
   background-color: tomato;
   border-style: 10px solid;
   border-color: #636364;
+  justify-content: space-between;
+  padding: 10px;
 }
 
-#navBar h1 {
+header h1 {
   width: 25%;
   font-weight: 500;
   margin: 5px;
@@ -22,15 +27,27 @@ body {
   color: white;
 }
 
-#navigation {
+/* Navigation CSS */
+
+.navContainer{
+  display: flex;
+  justify-content: center;
+}
+
+nav{
   display: flex;
   width: 50%;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content:space-between;
   color: white;
-  font-size: 30px ;
+  font-size: 30px;
+
 }
 
+nav a {
+  color: inherit;
+  text-decoration: none;
+}
 
 .icons {
   display: flex;
@@ -40,15 +57,16 @@ body {
 }
 
 .icons img {
-  margin: 15px;
-  cursor: pointer;
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
 }
 
 #Sarahphoto {
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
-  }
+}
 
 /* Subheading/welcome Page */
 
@@ -57,194 +75,159 @@ body {
   min-height: 600px;
   height: 80vh;
   grid-template-columns: 100%;
-  grid-template-rows: 100% ;
-  grid-template-areas: 
-  "codingimage" 
-  }
+  grid-template-rows: 100%;
+  grid-template-areas:
+    "codingimage"
+}
 
-  .heroBannerArea {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    display: flex;
-    position: relative;
-    }
-  
-  #headline {
-    border: 5px solid #FF6200;
-    background-color: rgba(255,255,255,0.8);
-    position: absolute;
-    right: -0px;
-    z-index: 2 ;
-    padding: 50px;
-  }
+.heroBannerArea {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  display: flex;
+  position: relative;
+}
 
-  #headline h2 {
-    font-size: 60px;
-    margin: 0px 0px;
-    color: #FF6200;
-  }
+#headline {
+  border: 5px solid #FF6200;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  right: -0px;
+  z-index: 2;
+  padding: 50px;
+}
 
-  /* Subheader Image CSS */
+#headline h2 {
+  font-size: 60px;
+  margin: 0px 0px;
+  color: #FF6200;
+  padding-right: 15px;
+}
 
-  #codingimage {
-    grid-area: codingimage ;
-    background-image: url("../images/pexels-pixabay-270348.jpg");
-  }
-  
+/* Subheader Image CSS */
 
-   /* About Me CSS */
-
-.page-wrapper {
-  background-color: tomato;
-  display: grid;
-  grid-template-columns: auto;
+#codingimage {
+  grid-area: codingimage;
+  background-image: url("../images/pexels-pixabay-270348.jpg");
 }
 
 
-.page-section1 {
-    margin: 0px 5%;
-    display: grid;
-    height: 250px;
-    grid-template-columns:1fr 1fr ;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:   
-  "headline2 Paragraph " 
-  }
+/* About Me CSS */
 
+.page-section1 {
+  margin: 0px 5.6%;
+  display: flex;
+  
+}
 
 #Paragraph {
   font-size: 15px;
-  color:white;
-  text-align:left;
+  color: white;
+}
+
+
+.subHeading {
+  font-size: 40px;
+  color: white;
+  border-right: 2px solid whitesmoke;
+  padding-right: 10px;
+  margin: 10px
+}
+
+
+/* Container Grid for Work  */
+
+#workGrid {
+  display: grid;
+  height: 750px;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "subheader furniture furniture"
+    "subheader prework-studyguide horiseon"
+    "subheader Calculator Website";
+}
+
+
+#furniture {
+  grid-area: furniture;
+  background-image: url("../images/furniture_website.png");
+  background-size: cover;
+}
+
+
+#prework-studyguide {
+  grid-area: prework-studyguide;
+  background-image: url("../images/Preworkstudyguide.png");
 
 }
 
-  #headline2 {
-    font-size: 40px;
-    color:white;
-    text-align:centre;
-    border-right: 2px solid whitesmoke;
-    width: 300px;
-    margin: 10px
+#horiseon {
+  grid-area: horiseon;
+  background-image: url("../images/Horiseonwebsite.png");
+}
+
+
+#Calculator {
+  grid-area: Calculator;
+  background-image: url("../images/pexels-tima-miroshnichenko-6694916.jpg");
+}
+
+
+
+#Website {
+  grid-area: Website;
+  background-image: url("../images/pexels-designecologist-1779487.jpg");
+}
+
+#subheader {
+  grid-area: subheader;
+}
+
+.subHeading1 {
+  font-size: 40px;
+  text-align: right;
+  color: white;
+  border-right: 2px solid whitesmoke;
+  padding-right: 10px;
+  margin: 10px
+
+}
+
+.gridheading {
+  background-color: rgb(0, 0, 0, 0.7);
+  padding: 15px;
+  height: 25px;
+  color: white;
+  font-size: 18px;
+  border-left: 5px solid orange;
+}
+
+
+.projectGridArea {
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 10px;
+  cursor: pointer;
+  display: grid;
+  align-content: end;
+}
+
+/* Contact Page CSS */
+
+.page-section2 {
+    margin: 0px 10%;
+    display: flex;
+    flex-direction: row;
   }
 
-   /* Work Page CSS  */
-
-     /* SubHead   */ 
-   .subHeading {
-    font-size: 40px;
-    color:white;
-    text-align:centre;
-    border-right: 2px solid whitesmoke;
-    width: 300px;
-    margin: 10px
-  }
-
-       /* Container Grid for Work  */ 
-    
-    #workGrid {
-      margin: 0px 5%;
-      display: grid;
-      height: 750px;
-      grid-template-columns:1fr 1fr 1fr ;
-      grid-template-rows: 1fr 1fr 1fr;
-      grid-template-areas:   
-    "subheader furniture furniture" 
-    "subheader prework-studyguide horiseon"
-    "subheader Calculator Website";
-    }
-   
-    #furniture {
-      grid-area: furniture ;
-      background-image: url("../images/furniture_website.png");
-
-    }
-    
-    
-    #prework-studyguide {
-      grid-area: prework-studyguide;
-      background-image: url("../images/Preworkstudyguide.png");
-    
-    }
-    
-    #horiseon {
-    grid-area: horiseon;
-    background-image: url("../images/Horiseonwebsite.png");
-    }
-
-     
-    #Calculator{
-      grid-area: Calculator;
-      background-image: url("../images/Horiseonwebsite.png");
-      }
-      
-
-
-    #Website{
-      grid-area: Website;
-      background-image: url("../images/Horiseonwebsite.png");
-      }
-      
-      #subheader{
-        grid-area: subheader;
-      }
-
- 
-
-    .gridheading {
-      background-color: rgb(0, 0,0,0.7);
-      padding: 15px;
-    height: 25px;
-    color: white;
-    font-size: 18px;
-    border-left: 5px solid orange;
-    }
-
-    
-    .projectGridArea {
-      
-      background-size:cover;
-      background-repeat: no-repeat;
-      margin: 10px;
-      cursor: pointer;
-      display: grid;
-      align-content:end ;
-        } 
-
-  /* Contact Page CSS */
-
-  .page-wrapper {
-    background-color: tomato;
-    display: grid;
-    grid-template-columns: auto;
-  }
-  
-  
-  .page-section2 {
-      margin: 0px 5%;
-      display: grid;
-      height: 750px;
-      grid-template-columns:1fr 1fr ;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas:   
-    "headline3 paragraph4 " 
-    }
-    
-      #headline3 {
-        font-size: 40px;
-        color:white;
-        text-align:centre;
-        border-right: 2px solid whitesmoke;
-        width: 300px;
-        margin: 10px
-      }  
 
 
 
 
-  /* Footer CSS */
+/* Footer CSS */
 .footer {
   padding: 30px;
   clear: both;
@@ -253,7 +236,7 @@ body {
 }
 
 
-.footerfont 
-{
+.footerfont {
   font-size: 20px;
 }
+
